# rust-spout2

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
src/: godot.rs  lib.rs
