[package]
name = "rust-spout2"
description = "Rust bindings for Spout2 on Windows."
version = "0.1.3"
edition = "2021"
authors = ["clover0916"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/clover0916/rust-spout2"
homepage = "https://github.com/clover0916/rust-spout2"
keywords = ["spout", "graphics", "windows", "interop"]
categories = ["api-bindings", "graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
autocxx = "0.26"
cxx = "1.0"

[build-dependencies]
autocxx-build = "0.26"
cmake = "0.1"
